--- a/Sesion3-de-Sass-a-PostCSS/without-sass-precss/package.json
+++ b/Sesion3-de-Sass-a-PostCSS/without-sass-precss/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "without-sass",
+  "name": "without-sass-precss",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,12 +10,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "autoprefixer": "^6.3.6",
     "gulp": "^3.9.1",
     "gulp-postcss": "^6.1.0",
-    "postcss-import": "^8.1.0",
-    "postcss-mixins": "^4.0.1",
-    "postcss-nested": "^1.0.0",
-    "postcss-simple-vars": "^1.2.0"
+    "precss": "^1.4.0"
   }
 }
