--- a/Sesion3-de-Sass-a-PostCSS/with-sass/package.json
+++ b/Sesion3-de-Sass-a-PostCSS/with-sass/package.json
@@ -2,7 +2,7 @@
   "name": "with-sass",
   "version": "1.0.0",
   "description": "",
-  "main": "gulpfile.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
